--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <form id="login">
-       <input id="username" type="text" placeholder="Username" />
+       <input id="username" type="text" placeholder="Username" value="tamere" />
        <button class="send">Play</button>
     </form>
 
