server optimisation multiple servers

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 </head>
 <body>
     <form id="login">
-       <input id="username" type="text" placeholder="Username" value="tamere" />
-       <button class="send">Play</button>
+        <input id="username" type="text" placeholder="Username" value="tamere" />
+        <label for="server">Select a server</label>
+        <select id="server"></select>
+        <button class="send">Play</button>
     </form>
 
     <div class="igeLoading loadingOverlay"></div>
