--- a/index.html
+++ b/index.html
@@ -16,11 +16,19 @@
         <input id="username" type="text" placeholder="Username" value="tamere" />
         <label for="server">Select a server</label>
         <select id="server"></select>
+        <label for="skin">Select a skin</label>
+        <select id="skin">
+            <option value="blue">Blue</option>
+            <option value="red">Red</option>
+            <option value="green">Green</option>
+            <option value="yellow">Yellow</option>
+        </select>
         <button class="send">Play</button>
     </form>
 
     <div class="igeLoading loadingOverlay"></div>
 
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/lodash/4.17.4/lodash.min.js"></script>
     <script type="text/javascript" src="/assets/js/config.js"></script>
     <script type="text/javascript" src="/assets/js/loader.js"></script>
 </body>
